feat(front): add broker and carac. cards on property page

--- a/templates/pages/property.html.twig
+++ b/templates/pages/property.html.twig
@@ -122,6 +122,28 @@
                         <input type="submit" value="Envoyer" id="contact-btn" />
                     </div>
                 </div>
+
+                <div class="broker-card">
+                    <div class="photo">
+                        <img src="/images/pages/home/team/alexandra.jpg" alt="Alexandra Visite" />
+                    </div>
+                    <div class="name title">Alexandra Visite</div>
+                    <div class="phone">+336 12 34 56 78</div>
+                    <div class="mail">alexandra.visite@immodemo.fr</div>
+                </div>
+
+                <div class="carac-card">
+                    <div class="title">Caractéristiques</div>
+                    <div class="carac"><span>Ville:</span> Barcelona I.</div>
+                    <div class="carac"><span>Garages:</span> 2 places</div>
+                    <div class="carac"><span>Type:</span> Appartement</div>
+                    <div class="carac"><span>Nombre de pièces:</span> 5</div>
+                    <div class="carac"><span>Surface habitable:</span> 224 m2</div>
+                    <div class="carac"><span>Surface totale:</span> 307 m2</div>
+                    <div class="carac"><span>Balcon:</span> Oui</div>
+                    <div class="carac"><span>Terrasse:</span> Oui</div>
+                    <div class="carac"><span>Nombre de s.d.b.:</span> 1</div>
+                </div>
             </div>
         </div>
     </div>
