--- a/assets/scss/pages/_property.scss
+++ b/assets/scss/pages/_property.scss
@@ -261,6 +261,43 @@
             }
           }
         }
+
+        .broker-card {
+          background: var(--light-blue);
+          margin: 30px 0;
+          padding: 20px;
+          text-align: center;
+          border-radius: 3px;
+          .photo {
+            margin: auto;
+            img {
+              width: 100px;
+              height: 100px;
+              border-radius: 100px;
+            }
+          }
+          .name { font-weight: bold; }
+          .phone, .mail { font-size: 14px; }
+        }
+
+        .carac-card {
+          background: var(--light-blue);
+          padding: 20px;
+          border-radius: 3px;
+          .title {
+            font-weight: bold;
+            font-size: 18px;
+            margin-bottom: 13px;
+          }
+          .carac {
+            font-size: 14px;
+            margin-bottom: 10px;
+            span { font-weight: bold; }
+          }
+          .carac:last-child {
+            margin: 0;
+          }
+        }
       }
     }
   }
