--- a/assets/scss/modules/_footer.scss
+++ b/assets/scss/modules/_footer.scss
@@ -11,6 +11,9 @@ footer {
     }
     .title {
       font-size: 18px;
+      line-height: 18px;
+      font-weight: normal;
+      margin: 0;
     }
   }
 
