--- a/templates/pages/property.html.twig
+++ b/templates/pages/property.html.twig
@@ -109,7 +109,7 @@
                         </label>
                         <label>
                             Votre message
-                            <textarea name="message" id="" rows="10" placeholder="Votre message"></textarea>
+                            <textarea name="message" rows="10" placeholder="Votre message"></textarea>
                         </label>
                         <label>
                             <div class="checkbox_data">
