--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -11,7 +11,7 @@
             <a href="{{anchor_base}}#notre-equipe">Notre équipe</a>
         </div>
         <div class="header_contact">
-            <a href="#">Contactez-nous</a>
+            <a href="{{ path('contact') }}">Contactez-nous</a>
         </div>
     </div>
 </nav>
