--- a/assets/scss/modules/_cards.scss
+++ b/assets/scss/modules/_cards.scss
@@ -3,7 +3,7 @@
 
   .container {
     background: var(--white);
-    border-radius: 3px;
+    border-radius: var(--border-radius);
     box-shadow: 0 4px 20px 0 rgba(71,100,195,0.1);
 
     .photo {
@@ -18,21 +18,23 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
-        border-top-left-radius: 3px;
-        border-top-right-radius: 3px;
+        border-top-left-radius: var(--border-radius);
+        border-top-right-radius: var(--border-radius);
       }
     }
 
     .desc {
       padding: 19px 17px 13px;
       .title {
+        font-size: inherit;
+        line-height: inherit;
         margin-bottom: 15px;
         a {
           color: var(--color);
           text-decoration: none;
           font-weight: bold;
           font-size: 18px;
-          transition: color 0.25s cubic-bezier(.39,.58,.57,1);
+          transition: color var(--transition);
         }
       }
       .price {
