--- a/assets/scss/modules/_header.scss
+++ b/assets/scss/modules/_header.scss
@@ -1,6 +1,6 @@
 .header {
-  width: 80vw;
-  max-width: 930px;
+  width: var(--width);
+  max-width: var(--max-width);
   margin: 30px auto;
 
   .nav {
@@ -33,8 +33,8 @@
         font-weight: bold;
         text-decoration: none;
         border: 2px solid var(--blue);
-        border-radius: 3px;
-        transition: 0.25s cubic-bezier(.39,.58,.57,1);
+        border-radius: var(--border-radius);
+        transition: var(--transition);
       }
       a:hover {
         background: none;
