--- a/assets/scss/modules/_newsletter.scss
+++ b/assets/scss/modules/_newsletter.scss
@@ -25,21 +25,15 @@
       margin-left: 30px;
       .title {
         font-size: 30px;
-        font-weight: bold;
         line-height: 30px;
-        margin-bottom: 10px;
       }
       .form {
         margin-top: 15px;
         input[type="email"] {
-          background: var(--white);
-          border: 1px solid #DDD;
-          border-radius: 3px;
-          padding: 8px 14px;
           width: 195px;
+          padding: 8px 14px;
           font-size: 12px;
-          box-shadow: inset 0 1px 5px 0 rgba(0,0,0,0.1);
-          transition: 0.25s cubic-bezier(.39,.58,.57,1);
+          transition: var(--transition);
         }
         input[type="email"]:focus {
           outline: none;
@@ -50,13 +44,11 @@
           font-weight: bold;
           background: none;
           border: 2px solid var(--blue);
-          border-radius: 3px;
           padding: 7px 10px;
           height: 32px;
           font-size: 12px;
           margin-left: 9px;
-          cursor: pointer;
-          transition: 0.25s cubic-bezier(.39,.58,.57,1);
+          transition: var(--transition);
         }
         input[type="submit"]:hover {
           color: var(--white);
