--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -1,7 +1,7 @@
 #homepage {
   .section.homesearch {
-    width: 80vw;
-    max-width: 930px;
+    width: var(--width);
+    max-width: var(--max-width);
     margin: 70px auto;
     position: relative;
 
@@ -9,17 +9,12 @@
       display: flex;
       justify-content: space-between;
       width: 100%;
-      position: relative;
 
       .text_section {
         margin-top: 75px;
         min-width: 415px;
         .title {
-          font-size: 45px;
-          font-weight: bold;
-          line-height: 60px;
           width: 380px;
-          margin-bottom: 10px;
         }
         .desc { width: 405px; }
       }
@@ -30,7 +25,7 @@
         position: relative;
         img {
           position: absolute;
-          border-radius: 3px;
+          border-radius: var(--border-radius);
         }
         #building-front {
           z-index: 20;
@@ -58,33 +53,17 @@
       position: absolute;
       top: 300px;
       background: var(--light-blue);
-      border-radius: 3px;
+      border-radius: var(--border-radius);
       padding: 17px 15px;
       z-index: 50;
 
       form {
-        select {
-          width: 140px;
-          color: #858585;
-          border: 1px solid #DDD;
-          background: var(--white);
-          border-radius: 3px;
-          margin-right: 7px;
-          padding: 10px 13px;
-          font-size: 14px;
-        }
         input[type="text"] {
-          width: 205px;
-          border: 1px solid #DDD;
-          background: var(--white);
           padding: 10px 13px 10px 32px;
-          border-radius: 3px;
-          font-size: 14px;
           margin-right: 5px;
         }
-        select:focus, input[type="text"]:active {
-          color: var(--blue);
-          border: 1px solid var(--blue);
+        input[type="submit"] {
+          padding: 10px 25px 10px 40px;
         }
         span {
           display: inline-block;
@@ -100,15 +79,6 @@
           position: absolute;
           background-size: contain;
         }
-        input[type="submit"] {
-          background: var(--blue);
-          color: var(--white);
-          border: 1px solid var(--blue);
-          border-radius: 3px;
-          padding: 10px 25px 10px 40px;
-          font-size: 14px;
-          cursor: pointer;
-        }
       }
     }
   }
@@ -118,8 +88,8 @@
     padding: 1px;
 
     .wrapper {
-      width: 80vw;
-      max-width: 930px;
+      width: var(--width);
+      max-width: var(--max-width);
       margin: 95px auto;
 
       .wrapper_block {
@@ -129,12 +99,6 @@
         margin-bottom: 10px;
 
         .text_section {
-          .title {
-            font-size: 45px;
-            font-weight: bold;
-            line-height: 60px;
-            margin-bottom: 10px;
-          }
           .desc {
             width: 460px;
           }
@@ -143,13 +107,13 @@
           padding-bottom: 10px;
           a {
             border: 2px solid var(--blue);
-            border-radius: 3px;
+            border-radius: var(--border-radius);
             font-size: 13px;
             color: var(--blue);
             text-decoration: none;
             font-weight: bold;
             padding: 8px 14px;
-            transition: 0.25s cubic-bezier(.39,.58,.57,1);
+            transition: var(--transition);
           }
           a:hover {
             color: var(--white);
@@ -220,8 +184,8 @@
   }
 
   .section.about-us {
-    width: 80vw;
-    max-width: 930px;
+    width: var(--width);
+    max-width: var(--max-width);
     margin: 100px auto;
     position: relative;
 
@@ -233,7 +197,7 @@
         position: relative;
         img {
           position: absolute;
-          border-radius: 3px;
+          border-radius: var(--border-radius);
         }
         #dot-background-au {
           z-index: 10;
@@ -253,12 +217,6 @@
       }
       .text_section {
         width: 31%;
-        .title {
-          font-size: 45px;
-          font-weight: bold;
-          line-height: 60px;
-          margin-bottom: 10px;
-        }
         .desc {
           font-size: 14px;
         }
@@ -267,8 +225,8 @@
   }
 
   .section.our-team {
-    width: 80vw;
-    max-width: 930px;
+    width: var(--width);
+    max-width: var(--max-width);
     margin: 0 auto 100px;
     position: relative;
     .wrapper_block {
@@ -282,7 +240,7 @@
       .card {
         background: var(--white);
         border: 1px solid var(--light-blue);
-        border-radius: 3px;
+        border-radius: var(--border-radius);
         box-shadow: 0 4px 20px 0 rgba(71,100,195,0.1);
         margin-bottom: 20px;
         padding: 40px 0;
@@ -302,28 +260,16 @@
           font-size: 14px;
         }
       }
-      .text_section .title {
-        font-size: 40px;
-        font-weight: bold;
-        line-height: 60px;
-        margin-bottom: 10px;
-      }
     }
   }
 
   .section.references {
-    width: 80vw;
-    max-width: 930px;
+    width: var(--width);
+    max-width: var(--max-width);
     margin: 0 auto 100px;
     position: relative;
     .text_section {
       margin-bottom: 35px;
-      .title {
-        font-size: 45px;
-        font-weight: bold;
-        line-height: 60px;
-        margin-bottom: 10px;
-      }
       .desc {
         max-width: 60%;
       }
@@ -335,7 +281,7 @@
         width: calc(50% - 20px);
           .container {
             background: var(--light-blue);
-            border-radius: 3px;
+            border-radius: var(--border-radius);
             padding: 20px;
             cursor: pointer;
 
