--- a/assets/scss/pages/_property.scss
+++ b/assets/scss/pages/_property.scss
@@ -1,15 +1,5 @@
 #property {
-  .wrapper_block {
-    width: 80vw;
-    max-width: 930px;
-    margin: 70px auto 0;
-    position: relative;
-  }
-
   .title_section .title {
-    font-size: 45px;
-    font-weight: bold;
-    line-height: 60px;
     margin-bottom: 5px;
   }
 
@@ -37,7 +27,7 @@
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
-                border-radius: 3px;
+                border-radius: var(--border-radius);
               }
             }
           }
@@ -94,7 +84,7 @@
                     height: 100%;
                     width: 100%;
                     object-fit: cover;
-                    border-radius: 3px;
+                    border-radius: var(--border-radius);
                     cursor: pointer;
                   }
                 }
@@ -148,11 +138,10 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            border-radius: 3px;
+            border-radius: var(--border-radius);
             .text_section {
               .desc { font-size: 13px; }
               .title {
-                font-weight: bold;
                 font-size: 19px;
                 line-height: 19px;
                 margin-bottom: 3px;
@@ -166,8 +155,8 @@
                 font-size: 13px;
                 font-weight: bold;
                 text-decoration: none;
-                border-radius: 3px;
-                transition: 0.25s cubic-bezier(0.39, 0.58, 0.57, 1);
+                border-radius: var(--border-radius);
+                transition: var(--transition);
               }
               a:hover {
                 background: var(--hover);
@@ -186,7 +175,7 @@
             height: 0;
             overflow: hidden;
             box-shadow: 0 4px 20px 0 rgba(71,100,195,0.1);
-            border-radius: 3px;
+            border-radius: var(--border-radius);
             margin-top: 40px;
             position: relative;
             #map {
@@ -206,11 +195,11 @@
 
         .contact-form {
           background: var(--light-blue);
-          border-radius: 3px;
+          border-radius: var(--border-radius);
           padding: 20px 20px 30px;
           .title {
             font-size: 21px;
-            font-weight: bold;
+            line-height: 21px;
             margin-bottom: 21px;
           }
           .form {
@@ -219,41 +208,17 @@
             }
             input[type="text"], input[type="email"], textarea {
               width: calc(100% - 26px);
-              background: var(--white);
-              border: 1px solid #DDD;
-              border-radius: 3px;
-              font-family: $font;
-              font-size: 14px;
-              padding: 13px;
               letter-spacing: 0.5px;
               margin-bottom: 15px;
-              box-shadow: inset 0 1px 5px 0 rgba(0,0,0,0.1);
-            }
-            textarea { resize: none; }
-            .checkbox_data { display: flex; }
-            input[type="checkbox"] {
-              width: 18px;
-              height: 18px;
-              margin: 0 8px 0 0;
-              accent-color: var(--blue);
-            }
-            .label_data {
-              margin-top: -1px;
-              margin-bottom: 20px;
-              width: calc(100% - 26px);
-              a { color: var(--blue); }
             }
             input[type="submit"] {
               background: none;
               border: 2px solid var(--blue);
               color: var(--blue);
-              border-radius: 3px;
               width: 100%;
               font-size: 13px;
               font-weight: bold;
-              padding: 11px;
-              cursor: pointer;
-              transition: 0.25s cubic-bezier(0.39, 0.58, 0.57, 1);
+              transition: var(--transition);
             }
             input[type="submit"]:hover {
               color: var(--white);
@@ -267,7 +232,7 @@
           margin: 30px 0;
           padding: 20px;
           text-align: center;
-          border-radius: 3px;
+          border-radius: var(--border-radius);
           .photo {
             margin: auto;
             img {
@@ -276,17 +241,20 @@
               border-radius: 100px;
             }
           }
-          .name { font-weight: bold; }
+          .name {
+            font-size: inherit;
+            line-height: inherit;
+          }
           .phone, .mail { font-size: 14px; }
         }
 
         .carac-card {
           background: var(--light-blue);
           padding: 20px;
-          border-radius: 3px;
+          border-radius: var(--border-radius);
           .title {
-            font-weight: bold;
             font-size: 18px;
+            line-height: 18px;
             margin-bottom: 13px;
           }
           .carac {
@@ -301,5 +269,4 @@
       }
     }
   }
-
 }
