--- a/assets/scss/pages/_search.scss
+++ b/assets/scss/pages/_search.scss
@@ -1,19 +1,9 @@
 #searchpage {
-  .wrapper_block {
-    width: 80vw;
-    max-width: 930px;
-    margin: 70px auto 0;
-    position: relative;
-  }
-
   .section.headings {
     .wrapper_block {
       margin: 80px auto 45px;
       text-align: center;
       .title {
-        font-size: 45px;
-        font-weight: bold;
-        line-height: 60px;
         margin-bottom: 5px;
       }
       .desc {
@@ -34,26 +24,12 @@
         justify-content: center;
         input[type="text"] {
           width: 250px;
-          border: 1px solid #DDD;
-          background: var(--white);
           padding: 11.5px;
-          border-radius: 3px;
-          font-size: 13px;
           margin-right: 10px;
           letter-spacing: 0.4px;
         }
-        input[type="text"]:active {
-          color: var(--blue);
-          border: 1px solid var(--blue);
-        }
         input[type="submit"] {
-          background: var(--blue);
-          color: var(--white);
-          border: 1px solid var(--blue);
-          border-radius: 3px;
           padding: 10px 25px 10px 40px;
-          font-size: 14px;
-          cursor: pointer;
         }
       }
       .separation {
@@ -76,25 +52,13 @@
         gap: 10px;
         select {
           width: 100%;
-          color: #858585;
-          border: 1px solid #DDD;
-          background: var(--white);
-          border-radius: 3px;
           padding: 8px 13px;
-          font-size: 14px;
         }
         input[type="text"] {
           width: 250px;
-          border: 1px solid #DDD;
-          background: var(--white);
           padding: 10px 13px 10px 32px;
-          border-radius: 3px;
           font-size: 13px;
           letter-spacing: 0.4px;
-        }
-        select:focus, input[type="text"]:active {
-          color: var(--blue);
-          border: 1px solid var(--blue);
         }
         span {
           display: inline-block;
@@ -146,9 +110,9 @@
           font-weight: bold;
           text-decoration: none;
           border: 2px solid var(--blue);
-          border-radius: 3px;
+          border-radius: var(--border-radius);
           cursor: pointer;
-          transition: 0.25s cubic-bezier(.39,.58,.57,1);
+          transition: var(--transition);
         }
         button:hover {
           color: var(--white);
