--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -17,7 +17,7 @@
             </div>
         </div>
         <div class="searchbar_widget">
-            <form>
+            <form action="{{ path('search') }}" method="GET">
                 <select name="type" id="type">
                     <option value="">Type de bien</option>
                 </select>
@@ -39,7 +39,7 @@
                     <div class="desc">Perles rares à vendre : plongez dans l'excellence de notre collection exclusive.</div>
                 </div>
                 <div class="btn_section">
-                    <a href="#">Voir nos offres</a>
+                    <a href="{{ path('search') }}">Voir nos offres</a>
                 </div>
             </div>
             <div class="wrapper_controls">
@@ -52,70 +52,26 @@
                 </div>
             </div>
             <div class="wrapper_offers" id="topoffers_slider">
-                <div class="property-card" data-id="P001">
+                {% for i in 1..4 %}
+                <div class="property-card" data-id="P00{{i}}">
                     <div class="container">
                         <div class="photo">
-                            <a href="#">
+                            <a href="{{ path('property', {'slug': 'property-slug-ref12345'}) }}">
                                 <img src="https://picsum.photos/id/48/300/300" alt="titre" />
                             </a>
                         </div>
                         <div class="desc">
                             <div class="title">
-                                <a href="#">Grand 4 pièces avec une belle terrasse</a>
+                                <a href="{{ path('property', {'slug': 'property-slug-ref12345'}) }}">
+                                    Grand 4 pièces avec une belle terrasse
+                                </a>
                             </div>
                             <div class="price">320 000€</div>
                             <div class="city">Nantes</div>
                         </div>
                     </div>
                 </div>
-                <div class="property-card" data-id="P002">
-                    <div class="container">
-                        <div class="photo">
-                            <a href="#">
-                                <img src="https://picsum.photos/id/48/300/300" alt="titre" />
-                            </a>
-                        </div>
-                        <div class="desc">
-                            <div class="title">
-                                <a href="#">Grand appartement design avec terrasse</a>
-                            </div>
-                            <div class="price">280 000€</div>
-                            <div class="city">Treillières</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="property-card" data-id="P003">
-                    <div class="container">
-                        <div class="photo">
-                            <a href="#">
-                                <img src="https://picsum.photos/id/48/300/300" alt="titre" />
-                            </a>
-                        </div>
-                        <div class="desc">
-                            <div class="title">
-                                <a href="#">Appartement 3 pièces avec une belle terrasse</a>
-                            </div>
-                            <div class="price">350 000€</div>
-                            <div class="city">St. Sébastien sur Loire</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="property-card" data-id="P004">
-                    <div class="container">
-                        <div class="photo">
-                            <a href="#">
-                                <img src="https://picsum.photos/id/48/300/300" alt="titre" />
-                            </a>
-                        </div>
-                        <div class="desc">
-                            <div class="title">
-                                <a href="#">Magnifique duplex dans une villa privée</a>
-                            </div>
-                            <div class="price">280 000€</div>
-                            <div class="city">Rezé</div>
-                        </div>
-                    </div>
-                </div>
+                {% endfor %}
             </div>
         </div>
     </div>
