--- a/assets/scss/modules/_cards.scss
+++ b/assets/scss/modules/_cards.scss
@@ -29,6 +29,13 @@
         font-size: inherit;
         line-height: inherit;
         margin-bottom: 15px;
+        display: -webkit-box;
+        max-width: 100%;
+        height: 60px;
+        max-height: 60px;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
         a {
           color: var(--color);
           text-decoration: none;
