feat(front): add dynamic data to property page

--- a/assets/scss/pages/_property.scss
+++ b/assets/scss/pages/_property.scss
@@ -12,6 +12,7 @@
       .property-details {
         width: calc(70% - 15px);
         min-width: 600px;
+        min-height: 1350px;
 
         .slider_block {
           #property-slider {
