feat(front): add Map.vue component

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,7 +13,9 @@
     <body>
 		{% include 'partials/header.html.twig' %}
 
-        {% block body %}{% endblock %}
+        <div id="app">
+            {% block body %}{% endblock %}
+        </div>
 
 		{% include 'partials/footer.html.twig' %}
 
