--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -20,6 +20,9 @@
             <form action="{{ path('search') }}" method="GET">
                 <select name="type" id="type">
                     <option value="">Type de bien</option>
+                    {% for type in types %}
+                        <option value="{{ type.slug }}">{{ type.name }}</option>
+                    {% endfor %}
                 </select>
                 <span class="location">
                     <input type="text" name="location" id="location" placeholder="Ville ou code postal" />
