--- a/templates/pages/property.html.twig
+++ b/templates/pages/property.html.twig
@@ -43,7 +43,7 @@
                             {{ property.totalArea|round(0, 'ceil') }}m2
                         </div>
                         <div class="location">
-                            {{ property.city }}
+                            {{ property.location.city }}
                         </div>
                     </div>
 
@@ -119,7 +119,7 @@
                     <div class="carac"><span>Surface totale:</span> {{ property.totalArea|round(0, 'ceil') }} m2</div>
                     <div class="carac"><span>Nombre de pièces:</span> {{ property.room }}</div>
                     <div class="carac"><span>Nombre de chambres:</span> {{ property.bedroom }}</div>
-                    <div class="carac"><span>Ville:</span> {{ property.city }}</div>
+                    <div class="carac"><span>Ville:</span> {{ property.location.city }}</div>
                 </div>
             </div>
         </div>
