feat(front): add Location and TomSelect.js

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -19,6 +19,7 @@
 // ==================
 @import 'tiny-slider/dist/tiny-slider.css';
 @import 'leaflet/dist/leaflet.css';
+@import 'tom-select/dist/css/tom-select.css';
 
 // Outils
 // ==================
