--- a/templates/pages/search.html.twig
+++ b/templates/pages/search.html.twig
@@ -29,9 +29,7 @@
                         <option value="{{ type.slug }}">{{ type.name }}</option>
                     {% endfor %}
                 </select>
-                <span class="location">
-                    <input type="text" name="location" id="location" placeholder="Ville ou code postal" />
-                </span>
+                <Location></Location>
                 <span class="price">
                     <input type="text" name="max_price" id="max_price" placeholder="Prix maximum" />
                 </span>
