--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -24,9 +24,7 @@
                         <option value="{{ type.slug }}">{{ type.name }}</option>
                     {% endfor %}
                 </select>
-                <span class="location">
-                    <input type="text" name="location" id="location" placeholder="Ville ou code postal" />
-                </span>
+                <Location></Location>
                 <span class="submit search-animation">
                     <input type="submit" value="Rechercher" />
                 </span>
