feat(front): add dynamic search with Location component

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -49,6 +49,7 @@ body {
 @import 'modules/footer';
 @import 'modules/cards';
 @import 'modules/newsletter';
+@import 'modules/location';
 
 // Pages
 // ==================
