--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -58,26 +58,14 @@
       z-index: 50;
 
       form {
-        input[type="text"] {
-          padding: 10px 13px 10px 32px;
-          margin-right: 5px;
-        }
+        display: flex;
+        max-height: 40px;
         input[type="submit"] {
           padding: 10px 25px 10px 40px;
         }
         span {
           display: inline-block;
           position: relative;
-        }
-        span.location:after {
-          content: "";
-          width: 13px;
-          height: 20px;
-          background: url(/assets/images/icon/location.png) 0 0 no-repeat;
-          top: 10px;
-          left: 10px;
-          position: absolute;
-          background-size: contain;
         }
       }
     }
