--- a/templates/pages/search.html.twig
+++ b/templates/pages/search.html.twig
@@ -26,7 +26,9 @@
                 <select name="type" id="type">
                     <option value="">Type de bien</option>
                     {% for type in types %}
-                        <option value="{{ type.slug }}">{{ type.name }}</option>
+                        <option value="{{ type.slug }}"
+                            {% if type.slug == app.request.get('type') %} selected {% endif %}
+                        >{{ type.name }}</option>
                     {% endfor %}
                 </select>
                 {% set location = app.request.get('lieu') %}
