feat(front): add link to header logo and block user selection for ref.

--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -272,6 +272,7 @@
             border-radius: var(--border-radius);
             padding: 20px;
             cursor: pointer;
+            user-select: none;
 
             .quote {
               position: relative;
