--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -2,7 +2,9 @@
 <nav class="header" id="header">
     <div class="nav">
         <div class="header_logo">
-            <img src="/images/logo.svg" alt="ImmoDemo Logo" />
+            <a href="{{ path('home') }}">
+                <img src="/images/logo.svg" alt="ImmoDemo Logo" />
+            </a>
         </div>
         <div class="header_links">
             <a href="{{ path('home') }}">Accueil</a>
